--- a/mokepon.html
+++ b/mokepon.html
@@ -41,7 +41,9 @@
                     <p id="vidaJ">3</p>
                     <p id="movJ"></p>
                 </div>
-                
+                <div class="three">
+                    <img src="../Mokepon/imagenes/vs.png" alt="" width="50px" height="50px" class="vs">
+                </div>
                 <div id="two" class="two" align="center">
                     <p id="mascota-enemigo"> </p>
                     <p id="vidaE">3</p>
