Mokepon como  objetos (Clase 50 Platzi)

--- a/mokepon.html
+++ b/mokepon.html
@@ -13,22 +13,9 @@
     <section id="Elige_mascota">
         <h1 id="titulo">Mokepon </h1>
         <h2 id="mascota">Elige tu mokepon: </h2>
-        <div class="tarjetas">
-            <input type="radio" name="mascota" id="Charmander">
-            <label class="tarjetaCharmander" for="Charmander">
-                <p class="tex"> Charmander </p>
-                <img src="./imagenes/4m3s.gif" alt="Charmander" class="ch">
-            </label>
-            <input type="radio" name="mascota" id="Stitch">
-            <label class="tarjetaStitch" for="Stitch">
-                <p class="tex"> Stitch </p>
-                <img src="./imagenes/sti.gif" alt="Stitch" class="ch">
-            </label>
-            <input type="radio" name="mascota" id="Hongo">
-            <label class="tarjetaHongo" for="Hongo">
-                <p class="tex"> Hongo</p>
-                <img src="./imagenes/hongooo.gif" alt="Hongo" class="ch">
-            </label>
+        <div id="divTarjetas" class="tarjetas">
+           
+
         </div>
         <button id="boton-mascota" class="botoncito">Seleccionar</button>
     </section>
