Nuevas modificaciones, clase 55 Platzi

--- a/mokepon.html
+++ b/mokepon.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-            <div class="botonesAtaque">
+            <div id="divAtaques" class="botonesAtaque">
                 <button id="boton-Lanzallamas">LANZALLAMAS 🔥</button>
                 <button id="boton-Hidrobomba">HIDROBOMBA 💧</button>
                 <button id="boton-Gigadrenado">GIGADRENADO 🌿</button>
