Sistema por turnos. Platzi clase 59

--- a/mokepon.html
+++ b/mokepon.html
@@ -25,7 +25,7 @@
             <div class="health">
                 <div id="one" class="one" align="center">
                     <p id="mascota-jugador"> </p>
-                    <p id="vidaJ">3</p>
+                    <p id="vidaJ">0 Victorias</p>
                     <p id="movJ"></p>
                 </div>
                 <div class="three">
@@ -33,15 +33,13 @@
                 </div>
                 <div id="two" class="two" align="center">
                     <p id="mascota-enemigo"> </p>
-                    <p id="vidaE">3</p>
+                    <p id="vidaE">0 Victorias</p>
                     <p id="movE"></p>
                 </div>
             </div>
         </div>
             <div id="divAtaques" class="botonesAtaque">
-                <button id="boton-Lanzallamas">LANZALLAMAS 🔥</button>
-                <button id="boton-Hidrobomba">HIDROBOMBA 💧</button>
-                <button id="boton-Gigadrenado">GIGADRENADO 🌿</button>
+                
             </div>
     </section>
     <div align="center">
